# metamodule-amalgamatedharmonics

./: .gitmodules  CMakeLists.txt  LICENSE  plugin-mm.json
metamodule-plugins/: AmalgamatedHarmonics.mmplugin
